--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -29,7 +29,7 @@
         @RenderPage("_TopnavLayout.cshtml")
         <!-- Header -->
         <!-- Header -->
-        <div class="header bg-primary pb-6">
+        <!--<div class="header bg-primary pb-6">
             <div class="container-fluid">
                 <div class="header-body">
                     <div class="row align-items-center py-4">
@@ -47,79 +47,79 @@
                             <a href="#" class="btn btn-sm btn-neutral">New</a>
                             <a href="#" class="btn btn-sm btn-neutral">Filters</a>
                         </div>
-                    </div>
-                    <!-- Card stats -->
+                    </div>-->
+        <!-- Card stats -->
+        <!--<div class="row">
+            <div class="col-xl-3 col-md-6">
+                <div class="card card-stats">-->
+        <!-- Card body -->
+        <!--<div class="card-body">
                     <div class="row">
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card card-stats">
-                                <!-- Card body -->
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col">
-                                            <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
-                                            <span class="h2 font-weight-bold mb-0">350,897</span>
-                                        </div>
-                                        <div class="col-auto">
-                                            <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                                                <i class="ni ni-active-40"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="mt-3 mb-0 text-sm">
-                                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                                        <span class="text-nowrap">Since last month</span>
-                                    </p>
-                                </div>
+                        <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
+                            <span class="h2 font-weight-bold mb-0">350,897</span>
+                        </div>
+                        <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                                <i class="ni ni-active-40"></i>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card card-stats">
-                                <!-- Card body -->
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col">
-                                            <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                                            <span class="h2 font-weight-bold mb-0">2,356</span>
-                                        </div>
-                                        <div class="col-auto">
-                                            <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                                                <i class="ni ni-chart-pie-35"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="mt-3 mb-0 text-sm">
-                                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                                        <span class="text-nowrap">Since last month</span>
-                                    </p>
-                                </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-sm">
+                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                        <span class="text-nowrap">Since last month</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card card-stats">-->
+        <!-- Card body -->
+        <!--<div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+                            <span class="h2 font-weight-bold mb-0">2,356</span>
+                        </div>
+                        <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
+                                <i class="ni ni-chart-pie-35"></i>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card card-stats">
-                                <!-- Card body -->
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col">
-                                            <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                                            <span class="h2 font-weight-bold mb-0">924</span>
-                                        </div>
-                                        <div class="col-auto">
-                                            <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                                                <i class="ni ni-money-coins"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p class="mt-3 mb-0 text-sm">
-                                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                                        <span class="text-nowrap">Since last month</span>
-                                    </p>
-                                </div>
+                    </div>
+                    <p class="mt-3 mb-0 text-sm">
+                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                        <span class="text-nowrap">Since last month</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card card-stats">-->
+        <!-- Card body -->
+        <!--<div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
+                            <span class="h2 font-weight-bold mb-0">924</span>
+                        </div>
+                        <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
+                                <i class="ni ni-money-coins"></i>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card card-stats">
-                                <!-- Card body -->
-                                <div class="card-body">
+                    </div>
+                    <p class="mt-3 mb-0 text-sm">
+                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                        <span class="text-nowrap">Since last month</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card card-stats">-->
+        <!-- Card body -->
+        <!--<div class="card-body">
                                     <div class="row">
                                         <div class="col">
                                             <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!-- Page content -->
         <div class="container-fluid">
             @RenderBody()
@@ -162,11 +162,22 @@
     <!-- Argon JS -->
     <script src="~/Areas/Admin/Public/js/argon.js?v=1.2.0"></script>
     <script type="text/javascript">
+
+        $(document).ready(function () {
+            var page = location.pathname.split('/').pop();
+            $(".nav-link").each(function () {
+                $(this).removeClass("active");
+            });
+            $('.' + page).addClass("active");
+        });
         function _Profile() {
             $(location).attr("href", "/Admin/User/MyProfile");
         }
         function _Logout() {
             $(location).attr("href", "/Admin/User/Logout");
+        }
+        function _Dashboard() {
+            $(location).attr("href", "/Admin/AdminHome/Index");
         }
     </script>
 </body>
