--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -14,27 +14,27 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a class="nav-link active Index" id="Dashboard" href="#">
                             <i class="ni ni-tv-2 text-primary"></i>
-                            <span class="nav-link-text">Dashboard</span>
+                            <span class="nav-link-text" id="Dashboard" onclick="return _Dashboard()">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" id="" href="#">
                             <i class="ni ni-planet text-orange"></i>
                             <span class="nav-link-text">Icons</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" id="" href="#">
                             <i class="ni ni-pin-3 text-primary"></i>
                             <span class="nav-link-text">Google</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link MyProfile" href="#">
                             <i class="ni ni-single-02 text-yellow"></i>
-                            <span class="nav-link-text" onclick="return _Profile()">Profile</span>
+                            <span class="nav-link-text" onclick="return _Profile()">My Profile</span>
                         </a>
                     </li>
                     <li class="nav-item">
