--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -102,7 +102,7 @@
                     <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="media align-items-center">
                             <span class="avatar avatar-sm rounded-circle">
-                                <img alt="Image placeholder" src="~/Areas/Admin/Public/img/theme/team-4.jpg">
+                                <img alt="Image placeholder" src="@Url.Content(ViewBag.CurrentUser.User_Avatar)">
                             </span>
                             <div class="media-body  ml-2  d-none d-lg-block">
 
