Update function UploadFile

--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -20,9 +20,15 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link MyProfile" href="#">
+                            <i class="ni ni-single-02 text-yellow"></i>
+                            <span class="nav-link-text" onclick="return _Profile()">My Profile</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" id="" href="#">
                             <i class="ni ni-planet text-orange"></i>
-                            <span class="nav-link-text">Icons</span>
+                            <span class="nav-link-text">Customer</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -31,12 +37,7 @@
                             <span class="nav-link-text">Google</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link MyProfile" href="#">
-                            <i class="ni ni-single-02 text-yellow"></i>
-                            <span class="nav-link-text" onclick="return _Profile()">My Profile</span>
-                        </a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="ni ni-bullet-list-67 text-default"></i>
