Sửa session theo cơ chế middleware.

--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -171,7 +171,7 @@
             $('.' + page).addClass("active");
         });
         function _Profile() {
-            $(location).attr("href", "/Admin/User/MyProfile");
+            $(location).attr("href", "/Admin/UserManagement/MyProfile");
         }
         function _Logout() {
             $(location).attr("href", "/Admin/User/Logout");
