--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -14,7 +14,7 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active Index" id="Dashboard" href="#">
+                        <a class="nav-link active DashboardIndex" id="Dashboard" href="#">
                             <i class="ni ni-tv-2 text-primary"></i>
                             <span class="nav-link-text" id="Dashboard" onclick="return _Dashboard()">Dashboard</span>
                         </a>
@@ -26,9 +26,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="" href="#">
+                        <a class="nav-link CustomerIndex" href="#">
                             <i class="ni ni-planet text-orange"></i>
-                            <span class="nav-link-text">Customer</span>
+                            <span class="nav-link-text" onclick="return _Customer()">Customer</span>
                         </a>
                     </li>
                     <li class="nav-item">
