update contact us

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,295 @@
 ﻿@{
-    ViewBag.Title = "About";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<!--//header-->
+<!-- inner banner -->
+<div class="inner-banner">
+    <section class="w3l-breadcrumb">
+        <div class="container">
+            <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">About Us</h4>
+            <ul class="breadcrumbs-custom-path">
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>About Us</li>
+            </ul>
+        </div>
+    </section>
+</div>
+<!-- //inner banner -->
+<!-- about section -->
+<section class="about-section py-5">
+    <div class="container py-lg-5 pt-3">
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="about-single p-3 d-flex justify-content-between">
+                    <div class="about-icon mr-4">
+                        <i class="fa fa-headphones" aria-hidden="true"></i>
+                    </div>
+                    <div class="about-content">
+                        <h5 class="mb-3">Any Questions</h5>
+                        <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="about-single p-3 d-flex justify-content-between">
+                    <div class="about-icon mr-4">
+                        <i class="fa fa-laptop" aria-hidden="true"></i>
+                    </div>
+                    <div class="about-content">
+                        <h5 class="mb-3">Online Support</h5>
+                        <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="about-single p-3 d-flex justify-content-between">
+                    <div class="about-icon mr-4">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                    </div>
+                    <div class="about-content">
+                        <h5 class="mb-3">24/7 Call Center</h5>
+                        <p>
+                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
+                            laudan.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //about section -->
+<!-- about-2 section -->
+<section class="w3l-about-2 pb-5">
+    <div class="container pb-md-5 pb-4">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-lg-6 about-2-secs-left pr-lg-5">
+                <h3 class="title-style mb-sm-3 mb-2">Few Words About Us!</h3>
+                <p>
+                    Consectetur adipiscing elit. Aliquam sit amet
+                    efficitur tortor.Uspendisse efficitur orci urna. In et augue ornare, tempor massa in, luctus
+                    sapien.
+                </p>
+                <ul class="list-about-2 mt-sm-4 mt-3">
+                    <li class="py-1">
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Ut enim ad minim
+                        veniam
+                    </li>
+                    <li class="py-2">
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Quis nostrud
+                        exercitation
+                        ullamco
+                        laboris
+                    </li>
+                    <li class="py-1">
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Nisi ut aliquip ex
+                        ea commodo
+                        consequat
+                    </li>
+                </ul>
+                <div class="mt-4">
+                    <a class="btn btn-style-white btn-style-primary" href="services.html">View Our Services</a>
+                </div>
+            </div>
+            <div class="col-lg-6 about-2-secs-right mt-lg-0 mt-5">
+                <img src="~/Public/assets/images/about2.jpg" alt="" class="img-fluid img-responsive" />
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //about-2 section -->
+<!-- team section -->
+<section class="w3l-team py-5">
+    <div class="container py-md-5 py-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="section-heading text-center mb-sm-5 mb-4">
+                    <h3 class="title-style mb-2">Meet our lovely team</h3>
+                    <p class="lead">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                        eaque ipsa quae ab illo inventore.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <div class="team-block-single">
+                    <div class="team-grids">
+                        <a href="#team-single">
+                            <img src="~/Public/assets/images/team1.jpg" class="img-fluid" alt="">
+                            <div class="team-info">
+                                <div class="social-icons-section">
+                                    <a class="fac" href="#facebook">
+                                        <span class="fa fa-facebook"></span>
+                                    </a>
+                                    <a class="twitter mx-2" href="#twitter">
+                                        <span class="fa fa-twitter"></span>
+                                    </a>
+                                    <a class="google" href="#google-plus">
+                                        <span class="fa fa-google-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="team-bottom-block p-4">
+                        <h5 class="member mb-1"><a href="#team">Olive Yew</a></h5>
+                        <small>CEO of Company</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-md-0 mt-5">
+                <div class="team-block-single active">
+                    <div class="team-grids active">
+                        <a href="#team-single">
+                            <img src="~/Public/assets/images/team2.jpg" class="img-fluid" alt="">
+                            <div class="team-info">
+                                <div class="social-icons-section">
+                                    <a class="fac" href="#facebook">
+                                        <span class="fa fa-facebook"></span>
+                                    </a>
+                                    <a class="twitter mx-2" href="#twitter">
+                                        <span class="fa fa-twitter"></span>
+                                    </a>
+                                    <a class="google" href="#google-plus">
+                                        <span class="fa fa-google-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="team-bottom-block p-4">
+                        <h5 class="member mb-1 active"><a href="#team">Aida Joe</a></h5>
+                        <small>Team Leader</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-md-0 mt-5">
+                <div class="team-block-single">
+                    <div class="team-grids">
+                        <a href="#team-single">
+                            <img src="~/Public/assets/images/team3.jpg" class="img-fluid" alt="">
+                            <div class="team-info">
+                                <div class="social-icons-section">
+                                    <a class="fac" href="#facebook">
+                                        <span class="fa fa-facebook"></span>
+                                    </a>
+                                    <a class="twitter mx-2" href="#twitter">
+                                        <span class="fa fa-twitter"></span>
+                                    </a>
+                                    <a class="google" href="#google-plus">
+                                        <span class="fa fa-google-plus"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="team-bottom-block p-4">
+                        <h5 class="member mb-1"><a href="#team">Teri Dac</a></h5>
+                        <small>Manager of Company</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //team setion -->
+<!-- image with content section -->
+<section class="w3l-image-content">
+    <div class="row no-gutters align-items-center">
+        <div class="col-md-7 img-content-1">
+            <img src="~/Public/assets/images/image.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col-md-5 p-lg-5 p-md-3 p-4 my-md-0 my-3 text-center  img-content-2">
+            <h4 class="heading-styles">
+                <i class="fa fa-quote-left mr-2" aria-hidden="true"></i> Sed ut pers piciatis
+                unde omnis iste natus error sit voluptatem
+                totam rem aperiam, eaque ipsa quae ab illo inventore.
+            </h4>
+        </div>
+    </div>
+</section>
+<!-- //image with content section -->
+<!-- customers section -->
+<section class="w3l-customer-block py-5">
+    <div class="container py-md-5 py-4">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="section-heading text-center mb-sm-5 mb-4">
+                    <h3 class="title-style mb-2">Testimonials</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="customer-single pr-lg-4">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
+                        ornare, tempor
+                        massa
+                        in,
+                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
+                        quam viverra
+                        et.
+                    </blockquote>
+                    <div class="customer-img d-flex align-items-center mt-4">
+                        <img src="~/Public/assets/images/testi1.jpg" class="img-fluid mr-3" alt="" />
+                        <div class="customer-info">
+                            <h6>Theo Hall</h6>
+                            <small class="mb-0">Marketing Manager</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-md-0 mt-5">
+                <div class="customer-single pr-lg-4">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
+                        ornare, tempor
+                        massa
+                        in,
+                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
+                        quam viverra
+                        et.
+                    </blockquote>
+                    <div class="customer-img d-flex align-items-center mt-4">
+                        <img src="~/Public/assets/images/testi2.jpg" class="img-fluid mr-3" alt="" />
+                        <div class="customer-info">
+                            <h6>Jenna John</h6>
+                            <small class="mb-0">Co-founder of Company</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-md-0 mt-5">
+                <div class="customer-single pr-lg-4">
+                    <blockquote>
+                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
+                        ornare, tempor
+                        massa
+                        in,
+                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
+                        quam viverra
+                        et.
+                    </blockquote>
+                    <div class="customer-img d-flex align-items-center mt-4">
+                        <img src="~/Public/assets/images/testi3.jpg" class="img-fluid mr-3" alt="" />
+                        <div class="customer-info">
+                            <h6>William Due</h6>
+                            <small class="mb-0">Team Leader</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
