--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="~/Home/Services">Services</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="~/SendMailer/Index">Contact Us</a>
+                            <a class="nav-link" href="~/Home/Contact">Contact Us</a>
                         </li>
                         <!-- search button -->
                         <div class="search-right">
