--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -9,7 +9,7 @@
         <div class="container">
             <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">About Us</h4>
             <ul class="breadcrumbs-custom-path">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="~/Home/Index">Home</a></li>
                 <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>About Us</li>
             </ul>
         </div>
@@ -28,8 +28,7 @@
                     <div class="about-content">
                         <h5 class="mb-3">Any Questions</h5>
                         <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
+                            Excell-On boasts a young, dynamic, professional and qualified customer service staff.
                         </p>
                     </div>
                 </div>
@@ -42,8 +41,7 @@
                     <div class="about-content">
                         <h5 class="mb-3">Online Support</h5>
                         <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
+                            Always online to take care of customers in the best way.
                         </p>
                     </div>
                 </div>
@@ -56,8 +54,7 @@
                     <div class="about-content">
                         <h5 class="mb-3">24/7 Call Center</h5>
                         <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                            laudan.
+                            As long as customers want, we are always there.
                         </p>
                     </div>
                 </div>
@@ -73,29 +70,21 @@
             <div class="col-lg-6 about-2-secs-left pr-lg-5">
                 <h3 class="title-style mb-sm-3 mb-2">Few Words About Us!</h3>
                 <p>
-                    Consectetur adipiscing elit. Aliquam sit amet
-                    efficitur tortor.Uspendisse efficitur orci urna. In et augue ornare, tempor massa in, luctus
-                    sapien.
+                    Excell-on Consulting Services (ECS) helps organizations develop innovative business and commerce strategies and solutions. These solutions allow their (organizations, say clients of Excell-on Consulting Services) customers to capitalize on new technologies to create innovative products and services for the economy. Their consulting team stays focused on defining, optimizing, and aligning their client’s business and IT strategies.
                 </p>
                 <ul class="list-about-2 mt-sm-4 mt-3">
                     <li class="py-1">
-                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Ut enim ad minim
-                        veniam
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>The deepest desire of the customer
                     </li>
                     <li class="py-2">
-                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Quis nostrud
-                        exercitation
-                        ullamco
-                        laboris
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Emphasis on the highest standards
                     </li>
                     <li class="py-1">
-                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Nisi ut aliquip ex
-                        ea commodo
-                        consequat
+                        <i class="fa fa-check-square-o mr-2" aria-hidden="true"></i>Hire and develop the best
                     </li>
                 </ul>
                 <div class="mt-4">
-                    <a class="btn btn-style-white btn-style-primary" href="services.html">View Our Services</a>
+                    <a class="btn btn-style-white btn-style-primary" href="~/Home/Service">View Our Services</a>
                 </div>
             </div>
             <div class="col-lg-6 about-2-secs-right mt-lg-0 mt-5">
@@ -106,190 +95,5 @@
 </section>
 <!-- //about-2 section -->
 <!-- team section -->
-<section class="w3l-team py-5">
-    <div class="container py-md-5 py-4">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="section-heading text-center mb-sm-5 mb-4">
-                    <h3 class="title-style mb-2">Meet our lovely team</h3>
-                    <p class="lead">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
-                        eaque ipsa quae ab illo inventore.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-md-4">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/assets/images/team1.jpg" class="img-fluid" alt="">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1"><a href="#team">Olive Yew</a></h5>
-                        <small>CEO of Company</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mt-md-0 mt-5">
-                <div class="team-block-single active">
-                    <div class="team-grids active">
-                        <a href="#team-single">
-                            <img src="~/Public/assets/images/team2.jpg" class="img-fluid" alt="">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1 active"><a href="#team">Aida Joe</a></h5>
-                        <small>Team Leader</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mt-md-0 mt-5">
-                <div class="team-block-single">
-                    <div class="team-grids">
-                        <a href="#team-single">
-                            <img src="~/Public/assets/images/team3.jpg" class="img-fluid" alt="">
-                            <div class="team-info">
-                                <div class="social-icons-section">
-                                    <a class="fac" href="#facebook">
-                                        <span class="fa fa-facebook"></span>
-                                    </a>
-                                    <a class="twitter mx-2" href="#twitter">
-                                        <span class="fa fa-twitter"></span>
-                                    </a>
-                                    <a class="google" href="#google-plus">
-                                        <span class="fa fa-google-plus"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="team-bottom-block p-4">
-                        <h5 class="member mb-1"><a href="#team">Teri Dac</a></h5>
-                        <small>Manager of Company</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- //team setion -->
-<!-- image with content section -->
-<section class="w3l-image-content">
-    <div class="row no-gutters align-items-center">
-        <div class="col-md-7 img-content-1">
-            <img src="~/Public/assets/images/image.jpg" class="img-fluid" alt="" />
-        </div>
-        <div class="col-md-5 p-lg-5 p-md-3 p-4 my-md-0 my-3 text-center  img-content-2">
-            <h4 class="heading-styles">
-                <i class="fa fa-quote-left mr-2" aria-hidden="true"></i> Sed ut pers piciatis
-                unde omnis iste natus error sit voluptatem
-                totam rem aperiam, eaque ipsa quae ab illo inventore.
-            </h4>
-        </div>
-    </div>
-</section>
-<!-- //image with content section -->
-<!-- customers section -->
-<section class="w3l-customer-block py-5">
-    <div class="container py-md-5 py-4">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="section-heading text-center mb-sm-5 mb-4">
-                    <h3 class="title-style mb-2">Testimonials</h3>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="customer-single pr-lg-4">
-                    <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
-                        ornare, tempor
-                        massa
-                        in,
-                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
-                        quam viverra
-                        et.
-                    </blockquote>
-                    <div class="customer-img d-flex align-items-center mt-4">
-                        <img src="~/Public/assets/images/testi1.jpg" class="img-fluid mr-3" alt="" />
-                        <div class="customer-info">
-                            <h6>Theo Hall</h6>
-                            <small class="mb-0">Marketing Manager</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mt-md-0 mt-5">
-                <div class="customer-single pr-lg-4">
-                    <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
-                        ornare, tempor
-                        massa
-                        in,
-                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
-                        quam viverra
-                        et.
-                    </blockquote>
-                    <div class="customer-img d-flex align-items-center mt-4">
-                        <img src="~/Public/assets/images/testi2.jpg" class="img-fluid mr-3" alt="" />
-                        <div class="customer-info">
-                            <h6>Jenna John</h6>
-                            <small class="mb-0">Co-founder of Company</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mt-md-0 mt-5">
-                <div class="customer-single pr-lg-4">
-                    <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adip iscing elit sed. orci urna. In et augue
-                        ornare, tempor
-                        massa
-                        in,
-                        luctus sapien. Proin a diam et dui fermentum dolor molestie vel id neque euismod massa a
-                        quam viverra
-                        et.
-                    </blockquote>
-                    <div class="customer-img d-flex align-items-center mt-4">
-                        <img src="~/Public/assets/images/testi3.jpg" class="img-fluid mr-3" alt="" />
-                        <div class="customer-info">
-                            <h6>William Due</h6>
-                            <small class="mb-0">Team Leader</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 
