--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -10,7 +10,7 @@
         <div class="container">
             <h4 class="inner-text-title font-weight-bold text-white mb-sm-3 mb-2">Contact Us</h4>
             <ul class="breadcrumbs-custom-path">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="~/Home/Index">Home</a></li>
                 <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>Contact Us</li>
             </ul>
         </div>
@@ -24,8 +24,7 @@
                 <div class="section-heading text-center mb-sm-5 mb-4">
                     <h3 class="title-style mb-2">Contact Us</h3>
                     <p class="lead">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
-                        eaque ipsa quae ab illo inventore.
+                        We always try to give you the best service.
                     </p>
                 </div>
             </div>
