CRUD company by ajax. Tùy chỉnh datatable

--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -14,7 +14,7 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active DashboardIndex" id="Dashboard" href="#">
+                        <a class="nav-link active DashboardIndex" href="#">
                             <i class="ni ni-tv-2 text-primary"></i>
                             <span class="nav-link-text" id="Dashboard" onclick="return _Dashboard()">Dashboard</span>
                         </a>
@@ -32,9 +32,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="" href="#">
+                        <a class="nav-link CompanyIndex" href="#">
                             <i class="ni ni-pin-3 text-primary"></i>
-                            <span class="nav-link-text">Google</span>
+                            <span class="nav-link-text" onclick="return _Company()">Company</span>
                         </a>
                     </li>
 
