--- a/Areas/Admin/Views/UserManagement/MyProfile.cshtml
+++ b/Areas/Admin/Views/UserManagement/MyProfile.cshtml
@@ -106,7 +106,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label class="form-control-label" for="input-email">Password</label>
-                                            <input type="password" name="User_Password" class="form-control form-control-alternative" value="@Model.User_Password">
+                                            <input type="password" name="User_Password" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
