--- a/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
+++ b/Areas/Admin/Views/CustomerManagement/CustomerIndex.cshtml
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="col-xl-12">
-            <table id="table_id" class="display">
+            <table id="table_Customer" class="display">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -53,6 +53,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
 }
 @section js{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#table_Customer').DataTable();
+        });
+    </script>
    
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 
