--- a/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
+++ b/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
@@ -193,11 +193,9 @@
                                 </td>
                             </tr>
                         }
-
-
                     </tbody>
                 </table>
-
+                
             </div>
 
         </div>
@@ -209,21 +207,14 @@
 @section css{
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
-    <link href="~/Areas/Admin/Public/DataTable/pagination.css" rel="stylesheet" />
     <link href="~/Areas/Admin/Public/css/loader.css" rel="stylesheet" />
 }
 @section js{
     <script type="text/javascript">
         $(document).ready(function () {
             $('#table_Company').DataTable({
-                "lengthMenu": [5 , 15, 20, 30],
-                "pagingType": "full_numbers",
-                language: {
-                    paginate: {
-                        next: '<i class="fa fa-fw fa-long-arrow-right">',
-                        previous: '<i class="fa fa-fw fa-long-arrow-left">'
-                    }
-                }        
+                "lengthMenu": [10, 15, 20, 30],
+                "pagingType": "full_numbers"
             });
         });
     </script>
